--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -271,7 +271,7 @@ skip-if = toolkit == 'gonk' || android_version == '18'
 skip-if = toolkit == 'gonk' || android_version == '18'
 [test_peerConnection_videoRenegotiationInactiveAnswer.html]
 # B2G emulator is too slow to finish a renegotiation test in under 5 minutes, Bug 1180000 for Linux debug e10s, android(Bug 1189784, timeouts on 4.3 emulator)
-skip-if = toolkit == 'gonk' || android_version == '18'
+skip-if = toolkit == 'gonk' || android_version == '18' || ((os == "win") && (bits == 64))
 [test_peerConnection_webAudio.html]
 tags = webaudio webrtc
 skip-if = toolkit == 'gonk' || buildapp == 'mulet' # b2g (Bug 1059867)
