Bug 1290068 - Skip test_peerConnection_simulcastOffer.html on Win64 for frequent failures. a=test-only

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -183,7 +183,7 @@ skip-if = toolkit == 'gonk' || buildapp == 'mulet' || android_version # b2g (Bug
 [test_peerConnection_scaleResolution.html]
 skip-if = toolkit == 'gonk' || buildapp == 'mulet' || (android_version == '18') # b2g(Bug 960442, video support for WebRTC is disabled on b2g), android(Bug 1189784, timeouts on 4.3 emulator)
 [test_peerConnection_simulcastOffer.html]
-skip-if = toolkit == 'gonk' || buildapp == 'mulet' || android_version # b2g(Bug 960442, video support for WebRTC is disabled on b2g), no simulcast support on android
+skip-if = toolkit == 'gonk' || buildapp == 'mulet' || android_version || ((os == "win") && (bits == 64)) # b2g(Bug 960442, video support for WebRTC is disabled on b2g), no simulcast support on android
 #[test_peerConnection_relayOnly.html]
 #skip-if = toolkit == 'gonk' || buildapp == 'mulet' # b2g(Bug 960442, video support for WebRTC is disabled on b2g)
 [test_peerConnection_callbacks.html]
