Bug 1290308 - Skip test_capture.html on Win64 for frequent failures. a=test-only

--- a/dom/canvas/test/mochitest.ini
+++ b/dom/canvas/test/mochitest.ini
@@ -223,7 +223,7 @@ skip-if = os == "android" || appname == "b2g"
 [test_canvas_strokeStyle_getter.html]
 [test_capture.html]
 support-files = captureStream_common.js
-skip-if = ((os == "win") && debug && (bits == 64)) # Bug 1289761 - Permafail on Win64 debug
+skip-if = ((os == "win") && (bits == 64)) # Bug 1289761 - Permafail on Win64 debug
 [test_drawImageIncomplete.html]
 [test_drawImage_document_domain.html]
 [test_drawImage_edge_cases.html]
