--- a/dom/canvas/test/webgl-conf/generated-mochitest.ini
+++ b/dom/canvas/test/webgl-conf/generated-mochitest.ini
@@ -6041,6 +6041,7 @@ skip-if = (os == 'win')
 [generated/test_conformance__extensions__webgl-draw-buffers-max-draw-buffers.html]
 [generated/test_conformance__extensions__webgl-draw-buffers.html]
 skip-if = (os == 'linux')
+fail-if = (os == 'mac')
 [generated/test_conformance__extensions__webgl-shared-resources.html]
 [generated/test_conformance__glsl__bugs__angle-ambiguous-function-call.html]
 [generated/test_conformance__glsl__bugs__angle-constructor-invalid-parameters.html]
