--- a/dom/canvas/test/webgl-conf/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conf/mochitest-errata.ini
@@ -90,6 +90,7 @@ fail-if = (os == 'mac' && os_version == '10.6')
 skip-if = (os == 'b2g') || (os == 'linux') || (os == 'android')
 
 [generated/test_conformance__extensions__webgl-draw-buffers.html]
+fail-if = (os == 'mac')
 # Crashes
 skip-if = (os == 'linux')
 
