Bug 1305204 - Backout bug 1275746. a=ritu
--HG--
extra : transplant_source : C%01%F3A%F6z%B6%DB%9B%05%CB%AE%B9i%8A%AE%BA%D2%06%D2
extra : histedit_source : cabea2b14025d4f92b0e8ac5a17ba0e2c3f146a9%2C1604d667eb14bb9f448ba17437df017d1c77f269

--- a/testing/web-platform/meta/XMLHttpRequest/open-url-bogus.htm.ini
+++ b/testing/web-platform/meta/XMLHttpRequest/open-url-bogus.htm.ini
@@ -2,4 +2,12 @@
   type: testharness
   [XMLHttpRequest: open() - bogus URLs (http://u:p@/)]
     expected: FAIL
+  [XMLHttpRequest: open() - bogus URLs (http:)]
+    expected: FAIL
+
+  [XMLHttpRequest: open() - bogus URLs (ftp:)]
+    expected: FAIL
+
+  [XMLHttpRequest: open() - bogus URLs (http:////////////)]
+    expected: FAIL
 
