Bug 1306645 - Don't add application/x-moz-file entries from the clipboard to dataTransfer with e10s. r=enndeakin, a=ritu
application/x-moz-file entries on the clipboard are not able to be
successfully transmitted across synchronous IPC due to bug 1308007, thus
they appear as useless null files.

This patch hides those useless null files, and thus unhides image data
which may have been on the clipboard but was previously hidden by the
presence of an application/x-moz-file file

MozReview-Commit-ID: 4RmQe9kDZLe

--HG--
extra : source : 3201c03e0c16fcba25c23af79cec8b08ea174ab7
extra : intermediate-source : 46279a9e334d86823bc5b68c834b8dd138f8d38d
extra : histedit_source : 71c4449496667bb0776602158d0b637b0895803d%2C48a228828bf170ef761c147f6775d6b38e0f7ce0

--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -277,6 +277,7 @@ skip-if = os == 'win'
 [browser_clipboard.js]
 subsuite = clipboard
 [browser_clipboard_pastefile.js]
+skip-if = e10s # Pasting files doesn't work in e10s (bug 1306645)
 [browser_contentAreaClick.js]
 skip-if = e10s # Clicks in content don't go through contentAreaClick with e10s.
 [browser_contextmenu.js]
