Bug 1315317 - Make sure PopupNotification reshows only occur when the tab is in the foreground. r=Gijs, a=gchang
MozReview-Commit-ID: CHnE28MNXXn

--HG--
extra : source : 7e61b840c16203a16144765b789f8777bf067369
extra : amend_source : ad981337b5eb00dbb51cca2d68dc559ca3953dcf
extra : intermediate-source : d936f8d5b0c96c70f9f3164ec9f5302847377379

--- a/devtools/client/responsive.html/test/browser/browser.ini
+++ b/devtools/client/responsive.html/test/browser/browser.ini
@@ -29,6 +29,7 @@ skip-if = true # Intermittent, see bug 1306816
 [browser_navigation.js]
 [browser_page_state.js]
 [browser_permission_doorhanger.js]
+skip-if = true # Bug 1314125: Relies on a feature not in 51
 [browser_resize_cmd.js]
 [browser_screenshot_button.js]
 [browser_shutdown_close_sync.js]
