--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1464,7 +1464,7 @@ DOMInterfaces = {
     'headerFile': 'WebGLUniformLocation.h'
 },
 
-'WebGLVertexArrayObjectOES': {
+'WebGLVertexArrayObject': {
     'nativeType': 'mozilla::WebGLVertexArray',
     'headerFile': 'WebGLVertexArray.h'
 },
