Bug 1308688. r=kmag, a=gchang

--- a/toolkit/modules/addons/.eslintrc
+++ b/toolkit/modules/addons/.eslintrc
@@ -6,6 +6,7 @@
     "addMessageListener": false,
     "removeEventListener": false,
     "sendAsyncMessage": false,
+    "AddonManagerPermissions": false,
 
     "initialProcessData": true,
   },
