Backed out changeset c56fe501d3ea (bug 1317625) because NeedsCallerType is not on beta.  r=a=red tree.

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1419,6 +1419,7 @@ DOMInterfaces = {
 'WebGLRenderingContext': {
     'nativeType': 'mozilla::WebGLContext',
     'headerFile': 'WebGLContext.h',
+    'implicitJSContext': [ 'getSupportedExtensions' ],
 },
 
 'WebGL2RenderingContext': {
