Bug 1324543 followup to make it work on beta.  r=a=bustage

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1425,6 +1425,7 @@ DOMInterfaces = {
 'WebGL2RenderingContext': {
     'nativeType': 'mozilla::WebGL2Context',
     'headerFile': 'WebGL2Context.h',
+    'implicitJSContext': [ 'getSupportedExtensions' ],
 },
 
 'WebGLSampler': {
