Bug 1616412 - Enable WebRender display item caching r=kvark
Differential Revision: https://phabricator.services.mozilla.com/D63269

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -4052,7 +4052,7 @@
 
 - name: gfx.webrender.enable-item-cache
   type: bool
-  value: false
+  value: @IS_NIGHTLY_BUILD@
   mirror: once
 
 #ifdef NIGHTLY_BUILD
