Bug 1615509: Add a test for changing top level target. r=mtigley
Differential Revision: https://phabricator.services.mozilla.com/D64535

--- a/devtools/client/inspector/compatibility/test/browser/browser.ini
+++ b/devtools/client/inspector/compatibility/test/browser/browser.ini
@@ -14,6 +14,7 @@ support-files =
 [browser_compatibility_event_document-reload.js]
 [browser_compatibility_event_rule-change.js]
 [browser_compatibility_event_selected-node-change.js]
+[browser_compatibility_event_top-level-target-change.js]
 [browser_compatibility_issue-node.js]
 [browser_compatibility_preference.js]
 [browser_compatibility_unsupported-browsers_all.js]
