Bug 1620744 - Convert generated_sources.py to py3; r=firefox-build-system-reviewers,rstewart
Differential Revision: https://phabricator.services.mozilla.com/D65853

--- a/Makefile.in
+++ b/Makefile.in
@@ -229,7 +229,7 @@ update-packaging:
 
 .PHONY: package-generated-sources
 package-generated-sources:
-	$(call py_action,package_generated_sources,'$(DIST)/$(PKG_PATH)$(GENERATED_SOURCE_FILE_PACKAGE)')
+	$(call py3_action,package_generated_sources,'$(DIST)/$(PKG_PATH)$(GENERATED_SOURCE_FILE_PACKAGE)')
 
 ifdef JS_STANDALONE
 # Delegate js-specific rules to js
