Bug 1560038 - Add FluentMessage and FluentPattern.
Differential Revision: https://phabricator.services.mozilla.com/D54324

Depends on D54323

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -289,6 +289,11 @@ DOMInterfaces = {
     'concrete': True,
 },
 
+'FluentPattern': {
+    'headerFile': 'mozilla/intl/FluentBundle.h',
+    'nativeType': 'mozilla::intl::FluentPattern',
+},
+
 'FluentResource': {
     'headerFile': 'mozilla/intl/FluentResource.h',
     'nativeType': 'mozilla::intl::FluentResource',
