Bug 1560038 - Add FluentBundle. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D54325

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -289,6 +289,10 @@ DOMInterfaces = {
     'concrete': True,
 },
 
+'FluentBundle': {
+    'nativeType': 'mozilla::intl::FluentBundle',
+},
+
 'FluentPattern': {
     'headerFile': 'mozilla/intl/FluentBundle.h',
     'nativeType': 'mozilla::intl::FluentPattern',
