Backed out 6 changesets (bug 1608302, bug 1608301) for linting failure on GeckoProcessManager.java.
CLOSED TREE

Backed out changeset 5a78c81ddaa7 (bug 1608302)
Backed out changeset 81b75065d43d (bug 1608302)
Backed out changeset e75565cd4103 (bug 1608302)
Backed out changeset dba5330a46dc (bug 1608301)
Backed out changeset 7b9e2ba30ff2 (bug 1608301)
Backed out changeset 3a2342e9440f (bug 1608301)

--- a/mobile/android/geckoview/src/main/AndroidManifest.xml
+++ b/mobile/android/geckoview/src/main/AndroidManifest.xml
@@ -56,25 +56,11 @@
                 android:process=":gmplugin">
         </service>
         <service
-                android:name="org.mozilla.gecko.process.GeckoChildProcessServices$tab0"
+                android:name="org.mozilla.gecko.process.GeckoChildProcessServices$tab"
                 android:enabled="true"
                 android:exported="false"
                 android:isolatedProcess="false"
-                android:process=":tab0">
-        </service>
-        <service
-                android:name="org.mozilla.gecko.process.GeckoChildProcessServices$tab1"
-                android:enabled="true"
-                android:exported="false"
-                android:isolatedProcess="false"
-                android:process=":tab1">
-        </service>
-        <service
-                android:name="org.mozilla.gecko.process.GeckoChildProcessServices$tab2"
-                android:enabled="true"
-                android:exported="false"
-                android:isolatedProcess="false"
-                android:process=":tab2">
+                android:process=":tab">
         </service>
         <service
                 android:name="org.mozilla.gecko.process.GeckoChildProcessServices$socket"
