--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -289,6 +289,11 @@ DOMInterfaces = {
     'concrete': True,
 },
 
+'FluentResource': {
+    'headerFile': 'mozilla/intl/FluentResource.h',
+    'nativeType': 'mozilla::intl::FluentResource',
+},
+
 'FontFaceSet': {
     'implicitJSContext': [ 'load' ],
 },
