Bug 1618712 - Use GroupPosition for heading levels in mac. r=morgan,nika
We were using the wrong Accessible method to get the level. We also need to swap IPDL methods to use the right one.

Differential Revision: https://phabricator.services.mozilla.com/D65645

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -280,8 +280,8 @@ platform = notwin
 [PDocAccessible::ARIARoleAtom]
 description = Legacy a11y IPC
 platform = notwin
-[PDocAccessible::GetLevelInternal]
-description = Legacy a11y IPC
+[PDocAccessible::GroupPosition]
+description = Legacy a11y IPC. Platform accessibility APIs need to query content synchronously for information.
 platform = notwin
 [PDocAccessible::CaretLineNumber]
 description = Legacy a11y IPC
