--- a/browser/modules/test/unit/xpcshell.ini
+++ b/browser/modules/test/unit/xpcshell.ini
@@ -7,6 +7,7 @@ skip-if = toolkit == 'android'
 [test_HomePage.js]
 [test_HomePage_ignore.js]
 [test_LiveBookmarkMigrator.js]
+[test_osKeyStore.js]
 [test_Sanitizer_interrupted.js]
 [test_SitePermissions.js]
 [test_SiteDataManager.js]
