--- a/browser/modules/test/unit/xpcshell.ini
+++ b/browser/modules/test/unit/xpcshell.ini
@@ -8,6 +8,7 @@ skip-if = toolkit == 'android'
 [test_HomePage_ignore.js]
 [test_LiveBookmarkMigrator.js]
 [test_osKeyStore.js]
+skip-if = !debug # test relies on osKeyStore reauth which is only testable in debug builds
 [test_Sanitizer_interrupted.js]
 [test_SitePermissions.js]
 [test_SiteDataManager.js]
