Bug 1578070 - Add a test, r=asuth
Opens a window from a service worker notification and attempts to call
`window.open` in that window. This crashes the content process that the first
window is running in.

Disabled by default for GeckoView, since test_openWindow.html is also disabled.

Differential Revision: https://phabricator.services.mozilla.com/D55044

--- a/dom/serviceworkers/test/mochitest.ini
+++ b/dom/serviceworkers/test/mochitest.ini
@@ -286,6 +286,10 @@ skip-if = toolkit == 'android' && !is_fennec
 skip-if = serviceworker_e10s # leaks InterceptedHttpChannel and others things
 [test_notification_constructor_error.html]
 [test_notification_get.html]
+[test_notification_openWindow.html]
+skip-if = toolkit == 'android' && !is_fennec # Bug 1620052
+support-files = notification_openWindow_worker.js file_notification_openWindow.html
+tags = openwindow
 [test_notificationclick.html]
 [test_notificationclick_focus.html]
 [test_notificationclick-otherwindow.html]
@@ -293,7 +297,7 @@ skip-if = serviceworker_e10s # leaks InterceptedHttpChannel and others things
 [test_onmessageerror.html]
 [test_opaque_intercept.html]
 [test_openWindow.html]
-skip-if = fission || (toolkit == 'android' && !is_fennec)
+skip-if = fission || (toolkit == 'android' && !is_fennec) # Bug 1620052
 tags = openwindow
 [test_origin_after_redirect.html]
 [test_origin_after_redirect_cached.html]
