--- a/dom/serviceworkers/test/mochitest.ini
+++ b/dom/serviceworkers/test/mochitest.ini
@@ -297,7 +297,7 @@ tags = openwindow
 [test_onmessageerror.html]
 [test_opaque_intercept.html]
 [test_openWindow.html]
-skip-if = fission || (toolkit == 'android' && !is_fennec) # Bug 1620052
+skip-if = toolkit == 'android' && !is_fennec # Bug 1620052
 tags = openwindow
 [test_origin_after_redirect.html]
 [test_origin_after_redirect_cached.html]
