--- a/taskcluster/ci/source-test/node.yml
+++ b/taskcluster/ci/source-test/node.yml
@@ -4,21 +4,28 @@
 ---
 newtab-unit-tests:
     description: newtab unit tests
-    platform: linux1804-64/opt
+    platform: linux64/opt
     treeherder:
         symbol: node(newtab)
         kind: test
         tier: 1
     worker-type: t-linux-xlarge
     worker:
-        docker-image: {in-tree: "ubuntu1804-test"}
+        docker-image: {in-tree: "desktop1604-test"}
         max-run-time: 1800
     require-build: true
+    fetches:
+        build:
+            - target.tar.bz2
     run:
         using: run-task
         cache-dotcache: true
+        # We fetch our own Firefox nightly because the version of firefox
+        # currently in the desktop1604-test docker image is too old to
+        # pass our unit tests.
         cwd: '{checkout}'
         command: >
+            export FIREFOX_BIN=$MOZ_FETCHES_DIR/firefox/firefox &&
             cd /builds/worker/checkouts/gecko/browser/components/newtab &&
             npm install &&
             node bin/try-runner.js
@@ -28,7 +35,7 @@ newtab-unit-tests:
 
 debugger-tests:
     description: devtools debugger unit tests and flow type checks
-    platform: linux1804-64/opt
+    platform: linux64/opt
     attributes:
         code-review: true
     treeherder:
@@ -54,7 +61,7 @@ debugger-tests:
 
 devtools-tests:
     description: devtools node-based tests (for instance jest)
-    platform: linux1804-64/opt
+    platform: linux64/opt
     treeherder:
         symbol: node(devtools)
         kind: test
@@ -84,7 +91,7 @@ devtools-tests:
 
 eslint-plugin-mozilla:
     description: eslint-plugin-mozilla integration tests
-    platform: linux1804-64/opt
+    platform: linux64/opt
     treeherder:
         symbol: node(epm)
         kind: test
