--- a/devtools/client/inspector/compatibility/test/browser/browser.ini
+++ b/devtools/client/inspector/compatibility/test/browser/browser.ini
@@ -17,5 +17,6 @@ support-files =
 [browser_compatibility_event_top-level-target-change.js]
 [browser_compatibility_issue-node.js]
 [browser_compatibility_preference.js]
+[browser_compatibility_throbber.js]
 [browser_compatibility_unsupported-browsers_all.js]
 [browser_compatibility_unsupported-browsers_some.js]
