--- a/browser/extensions/formautofill/test/unit/xpcshell.ini
+++ b/browser/extensions/formautofill/test/unit/xpcshell.ini
@@ -44,6 +44,7 @@ skip-if = tsan # Times out, bug 1612707
 skip-if = tsan # Times out, bug 1612707
 [test_nameUtils.js]
 [test_onFormSubmitted.js]
+[test_osKeyStore.js]
 skip-if = tsan # Times out, bug 1612707
 [test_parseAddressFormat.js]
 [test_profileAutocompleteResult.js]
