--- a/gfx/wr/wrench/Cargo.toml
+++ b/gfx/wr/wrench/Cargo.toml
@@ -29,6 +29,7 @@ webrender_api = {path = "../webrender_api", features=["serialize","deserialize"]
 winit = "0.19"
 serde = {version = "1.0", features = ["derive"] }
 semver = "0.9.0"
+swgl = { path = "../swgl" }
 
 [dependencies.image]
 version = "0.23"
