Backed out changeset a08637fb30c8 (bug 1143478) for causing bustages in /builds/worker/checkouts/gecko/ipc/mscom/Registration.cpp CLOSED TREE

--- a/testing/cppunittest.ini
+++ b/testing/cppunittest.ini
@@ -11,7 +11,6 @@
 [TestCasting]
 [TestCeilingFloor]
 [TestCheckedInt]
-[TestCompactPair]
 [TestCountPopulation]
 [TestCountZeroes]
 [TestDefineEnum]
@@ -54,6 +53,7 @@ skip-if = os != 'win'
 [TestPEExportSection]
 skip-if = os != 'win'
 [TestPLDHash]
+[TestPair]
 [TestPoisonArea]
 skip-if = os == 'android' # Bug 1147630
 [TestRange]
