--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
   "security/manager/ssl/osclientcerts",
   "testing/geckodriver",
   "toolkit/crashreporter/rust",
+  "toolkit/components/updateagent",
   "toolkit/library/gtest/rust",
   "toolkit/library/rust/",
 ]
