Bug 1619837 - Add a missing `fix-stacks` dependency for the `py2(mch)` test job. r=erahm
Differential Revision: https://phabricator.services.mozilla.com/D66511

--- a/taskcluster/ci/source-test/python.yml
+++ b/taskcluster/ci/source-test/python.yml
@@ -109,6 +109,8 @@ mochitest-harness:
               dest: tests
             - artifact: target.mochitest.tests.tar.gz
               dest: tests
+        toolchain:
+            - linux64-fix-stacks
     when:
         files-changed:
             - 'testing/mochitest/**'
