Bug 1619837 - Add a missing `fix-stacks` dependency for the `py2(ref)` test job. r=erahm
Differential Revision: https://phabricator.services.mozilla.com/D66522

--- a/taskcluster/ci/source-test/python.yml
+++ b/taskcluster/ci/source-test/python.yml
@@ -267,6 +267,8 @@ reftest-harness:
               dest: tests
             - artifact: target.reftest.tests.tar.gz
               dest: tests
+        toolchain:
+            - linux64-fix-stacks
     when:
         files-changed:
             - 'layout/tools/reftest/**'
