Bug 1618202 - Update WPT annotations. r=snorp
Tons of new passes, some fuzzy bits, and one failure from a test that makes bad
assumptions about themed and unthemed <input type=color> being equally tall.

Differential Revision: https://phabricator.services.mozilla.com/D65724

--- a/testing/web-platform/meta/css/css-ui/appearance-textfield-001.html.ini
+++ b/testing/web-platform/meta/css/css-ui/appearance-textfield-001.html.ini
@@ -1,5 +1,5 @@
 [appearance-textfield-001.html]
   expected:
-    if (os == "win") and (processor == "x86") and not debug: ["FAIL", "PASS"]
-    if (os == "win") and (processor == "x86") and debug: ["FAIL", "PASS"]
-    if (os == "win") and (processor == "x86_64"): ["FAIL", "PASS"]
+    if os == "win": ["FAIL", "PASS"]
+  fuzzy:
+    if os == "android": maxDifference=0-1;totalPixels=0-23
