--- a/netwerk/dns/tests/unit/xpcshell.ini
+++ b/netwerk/dns/tests/unit/xpcshell.ini
@@ -7,4 +7,5 @@ support-files =
   !/services/common/tests/unit/head_helpers.js
 
 [test_PublicSuffixList.js]
+[test_nsEffectiveTLDService_getKnownPublicSuffix.js]
 [test_nsEffectiveTLDService_Reload_DAFSA.js]
