Bug 1440212 part 2.  Add the ability to fire the load event on a frame element async from the load event on the window inside if they are in different docgroups. r=nika
Behind a pref for now.

Differential Revision: https://phabricator.services.mozilla.com/D35600

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3035,6 +3035,13 @@
   value: false
   mirror: always
 
+# When this pref is set, we can fire load events on iframe elements async if
+# the iframe is in a different docgroup from the document it contains.
+- name: dom.cross_docgroup_iframe_async_load_event
+  type: bool
+  value: false
+  mirror: always
+
 # WebIDL test prefs.
 - name: dom.webidl.test1
   type: bool
