--- a/taskcluster/ci/source-test/cram.yml
+++ b/taskcluster/ci/source-test/cram.yml
@@ -1,7 +1,7 @@
 ---
 tryselect:
     description: tools/tryselect integration tests
-    platform: linux1804-64/opt
+    platform: linux64/opt
     treeherder:
         symbol: cram(try)
         kind: test
