Bug 1621385 - Track the top non-private browsing tab in mobileWindowTracker. r=mixedpuppy,snorp
Differential Revision: https://phabricator.services.mozilla.com/D66311

--- a/mobile/android/geckoview/src/androidTest/assets/web_extensions/tabs-activate-remove-2/manifest.json
+++ b/mobile/android/geckoview/src/androidTest/assets/web_extensions/tabs-activate-remove-2/manifest.json
@@ -1,7 +1,7 @@
 {
   "applications": {
     "gecko": {
-      "id": "set-tab-active@tests.mozilla.org"
+      "id": "set-tab-active-2@tests.mozilla.org"
     }
   },
   "manifest_version": 2,
