--- a/gfx/wr/wrench/Cargo.toml
+++ b/gfx/wr/wrench/Cargo.toml
@@ -29,6 +29,7 @@ webrender_api = {path = "../webrender_api", features=["serialize","deserialize"]
 winit = "0.19"
 serde = {version = "1.0", features = ["derive"] }
 semver = "0.9.0"
+swgl = { path = "../swgl", optional = true }
 
 [dependencies.image]
 version = "0.23"
@@ -42,6 +43,7 @@ core-foundation = "0.6.4"
 [features]
 default = [ "env_logger" ]
 headless = [ "osmesa-sys", "osmesa-src" ]
+software = [ "swgl" ]
 
 [target.'cfg(target_os = "windows")'.dependencies]
 dwrote = "0.9"
