Bug 1424914 - adjust disabling condition on a CLOSED TREE r=test-only

--- a/devtools/client/styleeditor/test/browser.ini
+++ b/devtools/client/styleeditor/test/browser.ini
@@ -87,7 +87,7 @@ fail-if = fission # Got the expected number of style sheets. - Got 6, expected 1
 [browser_styleeditor_bug_870339.js]
 [browser_styleeditor_bug_1247083_inline_stylesheet_numbering.js]
 [browser_styleeditor_bug_1405342_serviceworker_iframes.js]
-skip-if = !debug && (os == "win") || (os == "linux" && bits == 64 && os_version == "18.04") #bug 1424914
+skip-if = !debug && (os == "win") || (os == "linux" && os_version == "18.04") #bug 1424914
 [browser_styleeditor_copyurl.js]
 [browser_styleeditor_enabled.js]
 [browser_styleeditor_fetch-from-netmonitor.js]
