Bug 1603459 - [ci] Add a shadow-scheduler for the new 'bugbug-push-schedules' optimizer, r=tomprince
Differential Revision: https://phabricator.services.mozilla.com/D65586

--- a/taskcluster/ci/source-test/shadow-scheduler.yml
+++ b/taskcluster/ci/source-test/shadow-scheduler.yml
@@ -32,3 +32,14 @@ relevant_tests:
     worker:
         env:
             TASKGRAPH_OPTIMIZE_STRATEGIES: taskgraph.optimize:relevant_tests
+
+bugbug_push_schedules:
+    description: Runs the bugbug_push_schedules optimization strategy instead of the default.
+    treeherder:
+        symbol: SS(bugbug_push_schedules)
+    index:
+        product: source
+        job-name: shadow-scheduler-bugbug_push_schedules
+    worker:
+        env:
+            TASKGRAPH_OPTIMIZE_STRATEGIES: taskgraph.optimize:bugbug_push_schedules
