Bug 1620051 - [ci] Stand up a shadow-scheduler to measure the SETA optimization strategy r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D65403

--- a/taskcluster/ci/source-test/shadow-scheduler.yml
+++ b/taskcluster/ci/source-test/shadow-scheduler.yml
@@ -23,7 +23,7 @@ job-defaults:
         sparse-profile: taskgraph
 
 relevant_tests:
-    description: Runs the relevant_tests optimization strategy instead of SETA.
+    description: Runs the relevant_tests optimization strategy instead of the default.
     treeherder:
         symbol: SS(relevant_tests)
     index:
@@ -43,3 +43,14 @@ bugbug_push_schedules:
     worker:
         env:
             TASKGRAPH_OPTIMIZE_STRATEGIES: taskgraph.optimize:bugbug_push_schedules
+
+seta:
+    description: Runs the SETA optimization strategy instead of the default.
+    treeherder:
+        symbol: SS(seta)
+    index:
+        product: source
+        job-name: shadow-scheduler-seta
+    worker:
+        env:
+            TASKGRAPH_OPTIMIZE_STRATEGIES: taskgraph.optimize:seta
