Backed out 2 changesets (bug 1621523) for perma failures on perma failures on test_2_conformance2__rendering__framebuffer-render-to-layer.html. CLOSED TREE
Backed out changeset 12e09fef3c3f (bug 1621523)
Backed out changeset c997932b6bfe (bug 1621523)

--- a/dom/canvas/test/webgl-conf/generated-mochitest.ini
+++ b/dom/canvas/test/webgl-conf/generated-mochitest.ini
@@ -2722,8 +2722,6 @@ support-files = always-fail.html
                 checkout/conformance2/rendering/element-index-uint.html
                 checkout/conformance2/rendering/framebuffer-completeness-draw-framebuffer.html
                 checkout/conformance2/rendering/framebuffer-completeness-unaffected.html
-                checkout/conformance2/rendering/framebuffer-render-to-layer-angle-issue.html
-                checkout/conformance2/rendering/framebuffer-render-to-layer.html
                 checkout/conformance2/rendering/framebuffer-texture-changing-base-level.html
                 checkout/conformance2/rendering/framebuffer-texture-level1.html
                 checkout/conformance2/rendering/framebuffer-unsupported.html
@@ -5307,7 +5305,7 @@ subsuite = webgl2-core
 subsuite = webgl2-core
 [generated/test_2_conformance2__renderbuffers__multisampled-depth-renderbuffer-initialization.html]
 subsuite = webgl2-core
-fail-if = 1
+fail-if = (os == 'mac')
 [generated/test_2_conformance2__renderbuffers__multisampled-renderbuffer-initialization.html]
 subsuite = webgl2-core
 fail-if = (os == 'android')
@@ -5372,10 +5370,6 @@ subsuite = webgl2-core
 [generated/test_2_conformance2__rendering__framebuffer-completeness-draw-framebuffer.html]
 subsuite = webgl2-core
 [generated/test_2_conformance2__rendering__framebuffer-completeness-unaffected.html]
-subsuite = webgl2-core
-[generated/test_2_conformance2__rendering__framebuffer-render-to-layer-angle-issue.html]
-subsuite = webgl2-core
-[generated/test_2_conformance2__rendering__framebuffer-render-to-layer.html]
 subsuite = webgl2-core
 [generated/test_2_conformance2__rendering__framebuffer-texture-changing-base-level.html]
 subsuite = webgl2-core
