--- a/dom/canvas/test/webgl-conf/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conf/mochitest-errata.ini
@@ -246,8 +246,6 @@ fail-if = 1
 fail-if = os == 'mac' && os_version == '10.14' # macosx1014 due to 1563418
 [generated/test_2_conformance2__textures__misc__tex-unpack-params-with-flip-y-and-premultiply-alpha.html]
 fail-if = 1
-[generated/test_2_conformance2__renderbuffers__multisampled-depth-renderbuffer-initialization.html]
-fail-if = 1
 
 ####################################################
 # Bugs
@@ -850,6 +848,8 @@ fail-if = (os == 'mac')
 
 ####################
 # failure on OSX
+[generated/test_2_conformance2__renderbuffers__multisampled-depth-renderbuffer-initialization.html]
+fail-if = (os == 'mac')
 [generated/test_2_conformance2__textures__misc__tex-unpack-params.html]
 skip-if = (os == 'mac' && debug)
 fail-if = (os == 'mac')
