--- a/testing/web-platform/meta/fetch/metadata/embed.https.sub.html.ini
+++ b/testing/web-platform/meta/fetch/metadata/embed.https.sub.html.ini
@@ -3,27 +3,22 @@
     if os == "mac": TIMEOUT
     if os == "linux": TIMEOUT
   [Navigate to same-site embed: sec-fetch-mode]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
 
   [Navigate to same-site embed: sec-fetch-dest]
     expected: FAIL
 
   [same-site embed: sec-fetch-dest]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
+
+  [same-origin embed: sec-fetch-site]
+    expected: FAIL
 
   [same-site embed: sec-fetch-mode]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
 
   [cross-site embed: sec-fetch-site]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
 
   [Wrapper: Navigate to cross-site embed]
     expected:
@@ -31,9 +26,7 @@
       if os == "linux": NOTRUN
 
   [Navigate to cross-site embed: sec-fetch-mode]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
 
   [Wrapper: cross-site embed]
     expected:
@@ -45,23 +38,23 @@
       if os == "mac": NOTRUN
       if os == "linux": NOTRUN
 
+  [Navigate to same-origin embed: sec-fetch-site]
+    expected: FAIL
+
   [Navigate to same-origin embed: sec-fetch-mode]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
 
   [Navigate to cross-site embed: sec-fetch-dest]
     expected: FAIL
 
   [Navigate to same-site embed: sec-fetch-site]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
+
+  [same-origin embed: sec-fetch-mode]
+    expected: FAIL
 
   [Navigate to same-origin embed: sec-fetch-dest]
-    expected:
-      if os == "win": FAIL
-      if os == "android": FAIL
+    expected: FAIL
 
   [Wrapper: same-site embed]
     expected:
@@ -74,22 +67,17 @@
       if os == "linux": TIMEOUT
 
   [cross-site embed: sec-fetch-dest]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
+
+  [same-origin embed: sec-fetch-dest]
+    expected: FAIL
 
   [same-site embed: sec-fetch-site]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
 
   [cross-site embed: sec-fetch-mode]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
 
   [Navigate to cross-site embed: sec-fetch-site]
-    expected:
-      if os == "mac": FAIL
-      if os == "linux": FAIL
+    expected: FAIL
 
