Bug 1622518 - Add release/beta expectation for oversized-images-reporting.html, unoptimized-lossy-images-reporting-onload.html, unoptimized-lossy-images-reporting.html. r=aryx
Differential Revision: https://phabricator.services.mozilla.com/D66891

--- a/testing/web-platform/meta/document-policy/reporting/oversized-images-reporting.html.ini
+++ b/testing/web-platform/meta/document-policy/reporting/oversized-images-reporting.html.ini
@@ -1,5 +1,9 @@
 [oversized-images-reporting.html]
-  expected: TIMEOUT
+  expected:
+    if release_or_beta: OK
+    TIMEOUT
   [oversized-images Report Format]
-    expected: TIMEOUT
+    expected:
+      if release_or_beta: FAIL
+      TIMEOUT
 
