--- a/toolkit/content/tests/chrome/chrome.ini
+++ b/toolkit/content/tests/chrome/chrome.ini
@@ -194,6 +194,7 @@ skip-if = toolkit == "cocoa"
 support-files = window_chromemargin.xhtml
 skip-if = toolkit == "cocoa"
 [test_autocomplete_mac_caret.xhtml]
+skip-if = toolkit != "cocoa"
 [test_cursorsnap.xhtml]
 disabled =
 #skip-if = os != "win"
