--- a/testing/web-platform/meta/html/browsers/the-window-object/apis-for-creating-and-navigating-browsing-contexts-by-name/open-features-non-integer-height.html.ini
+++ b/testing/web-platform/meta/html/browsers/the-window-object/apis-for-creating-and-navigating-browsing-contexts-by-name/open-features-non-integer-height.html.ini
@@ -1,48 +1,59 @@
 [open-features-non-integer-height.html]
   disabled:
     if webrender and not debug: bug 1425588
+  expected:
+    if devedition and os == "win" and bits == 32: ["PASS", "FAIL"]
   [features "height=405*3" should set "height=405"]
     expected:
+      if devedition and os == "win" and bits == 32: ["OK", "FAIL"]
       if (os == "android") and not e10s: FAIL
       if (os == "android") and e10s: FAIL
 
   [features "height=405.32" should set "height=405"]
     expected:
+      if devedition and os == "win" and bits == 32: ["OK", "FAIL"]
       if (os == "android") and not e10s: FAIL
       if (os == "android") and e10s: FAIL
 
   [features "height=405e1" should set "height=405"]
     expected:
+      if devedition and os == "win" and bits == 32: ["OK", "FAIL"]
       if (os == "android") and not e10s: FAIL
       if (os == "android") and e10s: FAIL
 
   [features "height=405/5" should set "height=405"]
     expected:
+      if devedition and os == "win" and bits == 32: ["OK", "FAIL"]
       if (os == "android") and not e10s: FAIL
       if (os == "android") and e10s: FAIL
 
   [features "height=405^4" should set "height=405"]
     expected:
+      if devedition and os == "win" and bits == 32: ["OK", "FAIL"]
       if (os == "android") and not e10s: FAIL
       if (os == "android") and e10s: FAIL
 
   [features "height=405.5" should set "height=405"]
     expected:
+      if devedition and os == "win" and bits == 32: ["OK", "FAIL"]
       if (os == "android") and not e10s: FAIL
       if (os == "android") and e10s: FAIL
 
   [features "height=405e-1" should set "height=405"]
     expected:
+      if devedition and os == "win" and bits == 32: ["OK", "FAIL"]
       if (os == "android") and not e10s: FAIL
       if (os == "android") and e10s: FAIL
 
   [features "height=405  " should set "height=405"]
     expected:
+      if devedition and os == "win" and bits == 32: ["OK", "FAIL"]
       if (os == "android") and not e10s: FAIL
       if (os == "android") and e10s: FAIL
 
   [features "height=405LLl" should set "height=405"]
     expected:
+      if devedition and os == "win" and bits == 32: ["OK", "FAIL"]
       if (os == "android") and not e10s: FAIL
       if (os == "android") and e10s: FAIL
 
