Bug 1618258 - Part 1: Rename FinalizationGroup to FinalizationRegistry. r=jonco
Differential Revision: https://phabricator.services.mozilla.com/D66930

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -4429,7 +4429,7 @@
 
 #ifdef NIGHTLY_BUILD
   # Experimental support for weak references in JavaScript (WeakRef and
-  # FinalizationGroup).
+  # FinalizationRegistry).
 - name: javascript.options.experimental.weakrefs
   type: RelaxedAtomicBool
   value: false
