--- a/dom/broadcastchannel/tests/mochitest.ini
+++ b/dom/broadcastchannel/tests/mochitest.ini
@@ -27,3 +27,4 @@ skip-if = (os == "win" && processor == "aarch64") #bug 1535784
 [test_ordering.html]
 [test_dataCloning.html]
 [test_dataURL.html]
+[test_message_after_close.html]
