--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -2406,6 +2406,13 @@
   value: false
   mirror: always
 
+# If true, all content requests will get upgraded to HTTPS://
+# (some Firefox functionality requests, like OCSP will not be affected)
+- name: dom.security.https_only_mode
+  type: RelaxedAtomicBool
+  value: false
+  mirror: always
+
 # Is support for selection event APIs enabled?
 - name: dom.select_events.enabled
   type: bool
