Backed out changeset b92e26454745 (bug 1622124) for causing failures in test_broadcastchannel_close2.html
CLOSED TREE

--- a/testing/web-platform/meta/webmessaging/broadcastchannel/basics.html.ini
+++ b/testing/web-platform/meta/webmessaging/broadcastchannel/basics.html.ini
@@ -1,4 +1,7 @@
 [basics.html]
+  [Closing a channel in onmessage prevents already queued tasks from firing onmessage events]
+    expected: FAIL
+
   [messages aren't delivered to a port closed after calling postMessage.]
     expected:
       if (os == "linux") and fission and not debug: ["PASS", "FAIL"]
