Bug 1593179 - Enable gfx.webrender.max-partial-present-rects by default on Windows r=nical
Differential Revision: https://phabricator.services.mozilla.com/D67082

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -4076,7 +4076,11 @@
 
 - name: gfx.webrender.max-partial-present-rects
   type: uint32_t
+#if defined(XP_WIN)
+  value: 1
+#else
   value: 0
+#endif
   mirror: once
 
 - name: gfx.webrender.enable-gpu-markers
